<resources>
    <string name="app_name">Blogger</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="submit_post">Submit Post</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="createAccount">Create Account</string>
    <string name="profile_image">Profile Image</string>
</resources>
